--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="anilog__inner anilog__inner--login">
                 <h1 class="anilog__h1">Login</h1>
                 <label class="anilog__label" for="anilog__name">Username</label>
-                <input type="text" class="anilog__input anilog__input--name" id="anilog__name" name="anilog__name">
+                <input type="text" class="anilog__input anilog__input--name" id="anilog__name" name="anilog__name" required>
                 <label class="anilog__label" for="anilog__pw">Password</label>
-                <input type="password" class="anilog__input anilog__input--pw" id="anilog__pw" name="anilog__pw">
+                <input type="password" class="anilog__input anilog__input--pw" id="anilog__pw" name="anilog__pw" required>
                 <div class="anilog__remember-wrap">
                     <input type="checkbox" class="anilog__check" id="anilog__rem" name="anilog__rem" value="false">
                     <label class="anilog__label" for="anilog__rem">Remember me</label>
@@ -26,13 +26,13 @@
             <div class="anilog__inner anilog__inner--signup">
                 <h1 class="anilog__h1">Sign Up</h1>
                 <label class="anilog__label" for="anilog__name2">Username</label>
-                <input type="text" class="anilog__input anilog__input--name" id="anilog__name2" name="anilog__name2">
+                <input type="text" class="anilog__input anilog__input--name" id="anilog__name2" name="anilog__name2" required>
                 <label class="anilog__label" for="anilog__pw2">Password</label>
-                <input type="password" class="anilog__input anilog__input--pw" id="anilog__pw2" name="anilog__pw2">
+                <input type="password" class="anilog__input anilog__input--pw" id="anilog__pw2" name="anilog__pw2" required>
                 <label class="anilog__label" for="anilog__email">Email</label>
-                <input type="email" class="anilog__input anilog__input--email" id="anilog__email" name="anilog__email">
+                <input type="email" class="anilog__input anilog__input--email" id="anilog__email" name="anilog__email" required>
                 <div class="anilog__remember-wrap">
-                    <input type="checkbox" class="anilog__check" id="anilog__rem" name="anilog__rem" value="false">
+                    <input type="checkbox" class="anilog__check" id="anilog__rem" name="anilog__rem" value="false" required>
                     <label class="anilog__label" for="anilog__rem">I agree to the terms and conditions</label>
                 </div>
                 <button class="anilog__submit">Login</button>
