--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="anilog__main">
-        <form class="anilog__cont">
+        <form class="anilog__cont" action="#" method="post">
             <div class="anilog__inner anilog__inner--login">
                 <h1 class="anilog__h1">Login</h1>
                 <label class="anilog__label" for="anilog__name">Username</label>
@@ -20,7 +20,7 @@
                     <input type="checkbox" class="anilog__check" id="anilog__rem" name="anilog__rem" value="false">
                     <label class="anilog__label" for="anilog__rem">Remember me</label>
                 </div>
-                <button class="anilog__submit">Login</button>
+                <button class="anilog__login">Login</button>
                 <p class="anilog__sign-up-in">Don't have an account yet? <a class="anilog__sign-up-in anilog__sign-up-in--link" href="#">Sign Up</a></p>
             </div>
             <div class="anilog__inner anilog__inner--signup">
@@ -35,7 +35,7 @@
                     <input type="checkbox" class="anilog__check" id="anilog__rem" name="anilog__rem" value="false" required>
                     <label class="anilog__label" for="anilog__rem">I agree to the terms and conditions</label>
                 </div>
-                <button class="anilog__submit">Login</button>
+                <button class="anilog__signup">Sign Up</button>
                 <p class="anilog__sign-up-in">Don't have an account yet? <a class="anilog__sign-up-in anilog__sign-up-in--link" href="#">Sign Up</a></p>
             </div>
         </form>
