--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <label class="anilog__label" for="anilog__rem">I agree to the terms and conditions</label>
                 </div>
                 <button class="anilog__submit">Sign Up</button>
-                <p class="anilog__sign-up-in">Don't have an account yet? <a class="anilog__sign-up-in anilog__sign-up-in--link" href="#">Sign Up</a></p>
+                <p class="anilog__sign-up-in">Already have an account? <a class="anilog__sign-up-in anilog__sign-up-in--link" href="#">Log In</a></p>
             </form>
         </div>
     </main>
