--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="anilog__main">
-        <div class="anilog__cont" action="#" method="post">
+        <div class="anilog__cont">
             <form class="anilog__inner anilog__inner--login">
                 <h1 class="anilog__h1">Login</h1>
                 <label class="anilog__label" for="anilog__name">Username</label>
